<resources>
    <string name="app_name">Hotel Ternarios</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_sobrenome">Sobrenome</string>
    <string name="txt_nomeUsuario">Nome de Usuario</string>
    <string name="txt_email">Endereço de e-mail</string>
    <string name="txt_senha">Senha</string>
    <string name="txt_Cpf">CPF</string>
    <string name="txt_cadastro">Cadastro</string>
    <string name="bt_Cadastro">Cadastro</string>
    <string name="txt_receber_email">Deseja receber e-mails com promoções, ofertas de útima hora e informações sobre hospedagem</string>
    <string name="txt_aceitar_termos">Ao se inscreve, você aceita os termos e condições e a política de privacidade</string>
    <string name="bt_cadastro">Cadastro</string>
    <string name="txt_ja_tem_conta">Já tem uma conta ? Faça login !</string>
    <string name="txt_login">Login</string>
    <string name="txt_hotel">Hotel Ternarius</string>
    <string name="navigation_drawer_open">Gaveta de navegação aberta</string>
    <string name="navigation_drawer_close">Gaveta de navegação fechada</string>
    <string name="txt_titulo">Android Studio</string>
    <string name="txt_subtitulo">reservar@ternarius.com</string>
    <string name="txt_cabecalho_nav">Cabeçalho de navegação</string>
    <string name="txt_configuracao">Configurações</string>
    <string name="txt_especiais">Especiais</string>
    <string name="txt_brasil">Brasil</string>
    <string name="txt_dia">Dia</string>
    <string name="txt_dias">Dias</string>
    <string name="txt_banner_description">Banner inicial dos pacotes</string>
    <string name="txt_imagem">Imagem das cidades</string>
    <string name="txt_preco">Preço final:</string>
    <string name="txt_realizaPag">REALIZAR PAGAMENTO</string>
    <string name="txt_name_resumo_pacote">Resumo do pacote</string>
    <string name="img_pacote">Imagem do pacote</string>
    <string name="txt_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="txt_value_compra">Valor da compra:</string>
    <string name="txt_numb_card">Número do Cartão</string>
    <string name="txt_nome_cartao">Nome no Cartão</string>
    <string name="txt_finaliza_compra">FINALIZAR COMPRA</string>
    <string name="txt_mes_cartao">MM</string>
    <string name="txt_ano_cartao">AA</string>
    <string name="txt_digito_card">CVC</string>
    <string name="txt_title_APPBAR_pagamento">Pagamento</string>
    <string name="txt_resume_compra">Resumo da Compra</string>
    <string name="txt_congrats">Parabéns!</string>
    <string name="txt_realizada">Compra realizada com sucesso :)</string>
    <string name="txt_resumo_compra_confira">Confira o resumo da compra:</string>
    <string name="txt_wait_dialog">Por favor aguarde...</string>
    <string name="txt_sai">SAIR</string>
    <string name="txt_reserva">RESERVAR</string>
    <string name="txt_de">de</string>
</resources>
