<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/cadastro_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:text="@string/txt_cadastro"
        android:textAlignment="center"
        android:textColor="@color/preto"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cadastro_cadastro"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="95dp"
        android:text="@string/txt_email"
        android:textColor="@color/preto" />

    <TextView
        android:id="@+id/lista_pacotes_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cadastro_cadastro"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="176dp"
        android:text="@string/txt_senha"
        android:textColor="@color/preto" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cadastro_cadastro"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="335dp"
        android:text="@string/txt_nome"
        android:textColor="@color/preto" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cadastro_cadastro"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="245dp"
        android:text="@string/txt_sobrenome"
        android:textColor="@color/preto" />

    <EditText
        android:id="@+id/cadastro_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cadastro_cadastro"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="115dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/cadastro_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lista_pacotes_country"
        android:layout_alignStart="@+id/cadastro_cadastro"
        android:ems="10"
        android:hint="@string/txt_senha"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cadastro_cadastro"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-3dp"
        android:layout_marginBottom="201dp"
        android:ems="10"
        android:hint="@string/txt_sobrenome"
        android:inputType="textPersonName"
        android:singleLine="false" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="146dp"
        android:text="@string/txt_receber_email" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/cadastro_cadastro"
        android:layout_marginTop="-335dp"
        android:ems="10"
        android:hint="@string/txt_nome"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="248dp"
        android:layout_height="47dp"
        android:layout_alignStart="@+id/lista_pacotes_country"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="89dp"
        android:text="@string/txt_aceitar_termos" />

    <Button
        android:id="@+id/cadastro_cadastrar"
        android:layout_width="246dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="46dp"
        android:background="@color/Azul_face"
        android:text="@string/bt_Cadastro" />

    <TextView
        android:id="@+id/cadastro_textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:text="@string/txt_ja_tem_conta" />

</RelativeLayout>