<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="278dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/Branco"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/login_senha"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="298dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/txt_senha"
        android:inputType="textPassword"
        android:textColorHint="@color/Branco"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/lista_pacotes_banner_inicial"
        android:layout_width="204dp"
        android:layout_height="242dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="25dp"
        app:srcCompat="@mipmap/ic_launcher_hotelt"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="90dp" />

    <Button
        android:id="@+id/login_btnLogin"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:background="@color/Azul_face"
        android:text="@string/txt_login"
        android:textColor="@color/Branco" />

    <Button
        android:id="@+id/login_btnCad"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:background="@color/Azul_face"
        android:text="@string/txt_cadastro"
        android:textColor="@color/Branco" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_btnGoogle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="0dp" />
</RelativeLayout>